Input name fixed

--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
                 <input
                   id="thefiles"
                   type="file"
-                  name="files"
+                  name="file"
                   accept=".jpg, .png, image/jpeg, image/png"
                   multiple
                 />
