--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         >
           <div class="container">
             <a class="navbar-brand" href="index.html">
-              <h1 class="text-black">Click Fit</h1>
+              <h1 class="text-black fw-bolder">Click Fit</h1>
             </a>
             <button class="navbar-toggler toggler-spring">
               <span class="navbar-toggler-icon"></span>
