Styles modified and images changiung

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
     <main class="main">
       <div
         class="hero-area pos-rel hero-before hero-bg"
-        style="background-image: url(assets/img/bg/shape-12.png)"
+        style="background-image: url(assets/img/bg/bg-hero.jpg)"
       >
         <img
           src="assets/img/shape/slider-shape-2.png"
@@ -110,9 +110,7 @@
                     </div>
                     <div class="numberapi-response mb-40"></div>
                     <div class="hero-btn">
-                      <a href="#" class="btn btn-circle btn-gradient">
-                        Contact Us
-                      </a>
+                      <a href="#" class="btn-hero btn-circle"> Contact Us </a>
                     </div>
                   </div>
                 </div>
@@ -120,13 +118,8 @@
               <div class="col-xl-7">
                 <div class="left-hdr-pic pos-rel text-center pl-60">
                   <img
-                    src="assets/img/vector/vector-2.png"
-                    class="vector-2"
-                    alt="no image"
-                  />
-                  <img
-                    src="assets/img/vector/vector-3.png"
-                    class="vector-3"
+                    src="assets/img/vector/fitness-vector-banner.png"
+                    class=""
                     alt="no image"
                   />
                 </div>
