Sevice section implemented

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         >
           <div class="container">
             <a class="navbar-brand" href="index.html">
-              <h1 class="text-black fw-bolder">Click Fit</h1>
+              <h1 class="text-white fw-bolder">Click Fit</h1>
             </a>
             <button class="navbar-toggler toggler-spring">
               <span class="navbar-toggler-icon"></span>
@@ -77,21 +77,6 @@
         class="hero-area pos-rel hero-before hero-bg"
         style="background-image: url(assets/img/bg/bg-hero.jpg)"
       >
-        <img
-          src="assets/img/shape/slider-shape-2.png"
-          alt="no image"
-          class="hero-shape-1"
-        />
-        <img
-          src="assets/img/shape/box-shape-2.png"
-          alt="no image"
-          class="hero-shape-2"
-        />
-        <img
-          src="assets/img/shape/shape-14.png"
-          alt="no image"
-          class="hero-shape-3"
-        />
         <div class="hero-single">
           <div class="container">
             <div class="row g-5">
@@ -192,15 +177,93 @@
                 Lorem ipsum dolor sit amet <span>ipsum</span> lorem ipsum dolor
               </h2>
               <p>
-                Caramels carrot cake wafer macaroon halvah. Candy canes sweet
-                roll powder cheesecake chocolate cookie cupcake caramels
-                tiramisu. Oat cake powder apple pie tootsie roll icing jujubes
-                cake.
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem
+                est necessitatibus quos, magnam consectetur culpa eum a
+                inventore neque veniam?
               </p>
               <div class="ajax-loader">
                 <img src="assets/img/logo/ajax-loader.gif" alt="Ajax Loader" />
               </div>
               <div class="numberapi-response"></div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div
+        class="service-area de-padding hero-bg"
+        style="background-image: url(assets/img/bg/bg-shape.png)"
+      >
+        <div class="container">
+          <div class="site-title">
+            <div class="row">
+              <div class="col-xl-7">
+                <h2 class="heading-2">
+                  We Provide our Clients <br />
+                  Best Services
+                </h2>
+                <a href="#" class="btn-hero btn-circle btn-sm">
+                  View All <i class="fa-solid fa-angles-right"></i>
+                </a>
+              </div>
+              <div class="col-xl-5">
+                <p class="mb-0">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Dolore deserunt quo autem animi dolor facilis quae sed error.
+                  Laboriosam beatae mollitia velit odio atque, consectetur animi
+                  voluptates quisquam non? Dolorum!
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="service-wpr grid-3">
+            <div
+              class="service-box"
+              style="background-image: url(assets/img/bg/service-1.jpg)"
+            >
+              <span class="service-shape"></span>
+              <div class="service-icon-title">
+                <h4 class="heading-4 text-white">Business Planning</h4>
+              </div>
+              <div class="service-desc">
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Voluptatibus nostrum a maiores eos quae expedita?
+                </p>
+                <a href="#" class="service-btn">Read More</a>
+              </div>
+            </div>
+            <div
+              class="service-box"
+              style="background-image: url(assets/img/bg/service-2.jpg)"
+            >
+              <span class="service-shape"></span>
+              <div class="service-icon-title">
+                <h4 class="heading-4 text-white">Financial Support</h4>
+              </div>
+              <div class="service-desc">
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Voluptatibus nostrum a maiores eos quae expedita?
+                </p>
+                <a href="#" class="service-btn">Read More</a>
+              </div>
+            </div>
+            <div
+              class="service-box"
+              style="background-image: url(assets/img/bg/service-3.jpg)"
+            >
+              <span class="service-shape"></span>
+              <div class="service-icon-title">
+                <h4 class="heading-4 text-white">Business Analytics</h4>
+              </div>
+              <div class="service-desc">
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Voluptatibus nostrum a maiores eos quae expedita?
+                </p>
+                <a href="#" class="service-btn">Read More</a>
+              </div>
             </div>
           </div>
         </div>
@@ -214,6 +277,32 @@
         />
         <div class="container">
           <div class="benefit-wpr grid-2">
+            <div class="benefit-right pl-60">
+              <span class="hero-sub-title text-grad mb-10">LOREM IPSUM</span>
+              <h2 class="heading-regular mb-30">Lorem ipsum dolor sit amet</h2>
+              <div class="ajax-loader">
+                <img src="assets/img/logo/ajax-loader.gif" alt="Ajax Loader" />
+              </div>
+              <div class="numberapi-response mb-40"></div>
+              <ul class="why-list">
+                <li>
+                  <i class="fa-solid fa-check"></i>
+                  Lorem ipsum dolor sit
+                </li>
+                <li>
+                  <i class="fa-solid fa-check"></i>
+                  Lorem ipsum dolor
+                </li>
+                <li>
+                  <i class="fa-solid fa-check"></i>
+                  Lorem ipsum dolor
+                </li>
+                <li>
+                  <i class="fa-solid fa-check"></i>
+                  Lorem ipsum dolor
+                </li>
+              </ul>
+            </div>
             <div class="benefit-left">
               <div class="benefit-opt grid-2">
                 <div class="benefit-opt-left element-center">
@@ -249,32 +338,6 @@
                   </div>
                 </div>
               </div>
-            </div>
-            <div class="benefit-right pl-60">
-              <span class="hero-sub-title text-grad mb-10">LOREM IPSUM</span>
-              <h2 class="heading-regular mb-30">Lorem ipsum dolor sit amet</h2>
-              <div class="ajax-loader">
-                <img src="assets/img/logo/ajax-loader.gif" alt="Ajax Loader" />
-              </div>
-              <div class="numberapi-response mb-40"></div>
-              <ul class="why-list">
-                <li>
-                  <i class="fa-solid fa-check"></i>
-                  Lorem ipsum dolor sit
-                </li>
-                <li>
-                  <i class="fa-solid fa-check"></i>
-                  Lorem ipsum dolor
-                </li>
-                <li>
-                  <i class="fa-solid fa-check"></i>
-                  Lorem ipsum dolor
-                </li>
-                <li>
-                  <i class="fa-solid fa-check"></i>
-                  Lorem ipsum dolor
-                </li>
-              </ul>
             </div>
           </div>
         </div>
