Responsive Issue fixed and Images Updated with animations

--- a/index.html
+++ b/index.html
@@ -115,12 +115,20 @@
       </div>
 
       <div class="feature-area de-pt">
-        <div class="container">
+        <div class="container pos-rel">
+          <img
+            src="assets/img/bg/bg-anim-1.png"
+            alt="no image"
+            class="upload-anim-shape round-move"
+          />
           <div class="feature-wpr">
             <div class="feature-box">
               <div class="feature-desc text-center">
                 <h4 class="hero-sub-title text-grad">Upload Your Image</h4>
-                <p>Click to choose an image from your device.</p>
+                <p>
+                  Click to choose an image from your device or Drag and Drop
+                  here.
+                </p>
               </div>
               <div class="feature-pic">
                 <input
@@ -312,8 +320,8 @@
                     /></i>
                     <h4 class="heading-4">Lorem ipsum</h4>
                     <p>
-                      cream cotton candy cotton candy ice cream. Tart pastry
-                      marshmallow muffin lemon drops sugar plum
+                      Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                      Quidem blanditiis inventore dignissimos quam, ex nostrum.
                     </p>
                   </div>
                 </div>
